fix(locations): overlap of images on mobile viewport removed

--- a/styles/includes/_locations.scss
+++ b/styles/includes/_locations.scss
@@ -42,6 +42,7 @@
 
 		@include bp-xs() {
 			grid-row: 1/1;
+			grid-column: 1/6;
 		}
 	}
 
